# microsoft-agent-framework-with-ollama-1

./: .env.example  .gitignore  404.html  DEVELOPMENT.md  MASTER_TEST_REPORT.md  PHASE6_REVIEW.md  README.md  conftest.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
.specify/memory/: constitution.md
api-reference/agents/: index.html
api-reference/cli/: index.html
api-reference/config/: index.html
api-reference/openapi/: index.html
api-reference/orchestration/: index.html
api-reference/rest-api/: index.html
architecture/agents/: index.html
architecture/overview/: index.html
architecture/workflow/: index.html
docs/: index.md  openapi.json  troubleshooting.md
docs/api-reference/: agents.md  cli.md  config.md  openapi.md  orchestration.md  rest-api.md
docs/architecture/: agents.md  overview.md  workflow.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: api-clients.md  api-usage.md  cli-usage.md  development.md
docs/specs/: index.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/api-clients/: index.html
guides/api-usage/: index.html
guides/cli-usage/: index.html
guides/development/: index.html
search/: search_index.json
specs/: index.html
specs/001-slogan-writer-reviewer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fastapi-api/: plan.md  (+2 more)
src/: __init__.py
stylesheets/: extra.css
troubleshooting/: index.html
(+38 files in other folders)
